# gshell-light

./: .gitignore  CMakeLists.txt  README.adoc  commandControl.h  commandControl.hpp  common.h  fileControl.h  fileControl.hpp  gls.h  gls.hpp  glsMode.h  main.c  main.cpp  mainHeader.h  mainHeader.hpp  nativeCommands.h  nativeCommands.hpp
